--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body style="padding-top: 100px;max-width: 1000px; margin: 0 auto;">
-<h1 style="font-size: 100px">Gengsta status: Triggered<h1>
+<h1 style="font-size: 100px">Gengsta status: <span style="color:red">Triggered</span><h1>
 </body>
 </html>
