--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Gengsta status</title>
 </head>
 
-<body style="padding-top: 20 100 20 0;max-width: 1000px; margin: 0 auto;">
-<h1 style="font-size: 5em">Gengsta status: <span style="color:red">Triggered</span><h1>
+<body style="padding: 100px 20px 0px 20px;max-width: 1000px; margin: 0 auto;">
+<h1 style="font-size: 7em">Gengsta status: <span style="color:red">Triggered</span><h1>
 </body>
 </html>
