--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="padding: 100px 20px 0px 20px;max-width: 1000px; margin: 0 auto;">
-<h1 style="font-size: 7em">Gengsta status: <span style="color:red">Triggered</span><h1>
+<h1 style="font-size: 7em">Gengsta status: <span style="color:red">Triggered</span></h1>
 <!-- <img src="http://thehill.com/sites/default/files/styles/thumb_small_article/public/blogs/trump_flag_hug.png" alt="Make America Great Again"> -->
 </body>
 </html>
