--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<title>Gengsta status</title>
 </head>
 
-<body style="padding: 100px 20px 0px 20px;max-width: 1000px; margin: 0 auto;">
-<h1 style="font-size: 7em">Gengsta status: <br><span style="color:green">Not triggered</span></h1>
-<!-- <img src="http://thehill.com/sites/default/files/styles/thumb_small_article/public/blogs/trump_flag_hug.png" alt="Make America Great Again"> -->
+<body style="height: 100vh; width: 100vw; background-size: cover; background-image: url(trump.jpg); background-position: center;">
+  <section style="text-align: center; padding: 25vh 20px 0px 20px;max-width: 1000px; margin: 0 auto;">
+<h1 style="font-size: 7em; color: white;">Gengsta status: <br><span style="color:limegreen">Not triggered</span></h1>
+</section>
 </body>
 </html>
