--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
 	<title>Gengsta status</title>
 </head>
 
-<body style="height: 100vh; width: 100vw; background-size: cover; background-image: url(trump.jpg); background-position: center;">
-  <section style="text-align: center; padding: 25vh 20px 0px 20px;max-width: 1000px; margin: 0 auto;">
-<h1 style="font-size: 7em; color: white;">Gengsta status: <br><span style="color:limegreen">Not triggered</span></h1>
-</section>
+<body
+  style="
+    height: 100vh;
+    width: 100vw;
+    background-size: cover;
+    background-image: url(trump.jpg);
+    background-position: center;
+    background-repeat: no-repeat;"
+  >
+  <section
+    style="
+      text-align: center;
+      padding: 25vh 20px 0px 20px;
+      max-width: 1000px;
+      margin: 0 auto;"
+    >
+      <h1
+        style="
+          font-size: calc(8vw + 10px);
+          color: white;"
+      >
+        Gengsta status: <br><span style="color:limegreen">Not triggered</span>
+      </h1>
+
+    </section>
 </body>
 </html>
